welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
def posfinale(): Boolean = {
	var h = getMondeHauteur()-1;
	var l = getMondeLargeur()-1;
	if (getX() == l && getY() == h) {
		return true;
	} else {
		return false;
	}
	 
}

def possuivante():Boolean = {
	if (estFaceMur()) {
		return false; 
	} else {
		return true;
	}
}
def deplace() = {
	var cpt = 0;
	var c = 0;
	var l = 0;
	var h = getMondeHauteur()-1;
	ecritMessage(cpt);
	gauche();
	while (!(posfinale())) {
		if (possuivante()) {
			diag=diag+1;
		}
		 else		
		{
			l = l+1;
			setPos(c,l);
			gauche();
			gauche();
		}
		(cpt = cpt + 1);
		 ecritMessage(cpt);
	}
	droite();
}
deplace();
}


}
